# datasheets

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  descriptive_stats.json  makefile  pyproject.toml
.github/workflows/: test.yml
data/adl/: adl.md  descriptive_stats.json
data/ai-aktindsigt/: ai-aktindsigt.md  descriptive_stats.json
data/ai4welfare-kb-data/: ai4welfare-kb-data.md
data/botxt/: botxt.md  descriptive_stats.json
data/cellar/: cellar.md  descriptive_stats.json
data/cvr-reports/: create.py  cvr-reports.md  descriptive_stats.json
data/dagw-adl/: descriptive_stats.json
data/dagw-botxt/: dagw-botxt.md  descriptive_stats.json
data/dagw-dannet/: descriptive_stats.json
data/dagw-depbank/: dagw-depbank.md  descriptive_stats.json
data/dagw-ep/: descriptive_stats.json
data/dagw-ft/: descriptive_stats.json
data/dagw-gutenberg/: dagw-gutenberg.md  descriptive_stats.json
data/dagw-hest/: dagw-hest.md  descriptive_stats.json
data/dagw-jvj/: descriptive_stats.json
data/dagw-naat/: dagw-naat.md  descriptive_stats.json
data/dagw-relig/: descriptive_stats.json
data/dagw-retsinformationdk/: descriptive_stats.json
data/dagw-retspraksis/: descriptive_stats.json
data/dagw-skat/: descriptive_stats.json
data/dagw-spont/: dagw-spont.md  descriptive_stats.json
data/dagw-synne/: descriptive_stats.json
data/dagw-tv2r/: dagw-tv2r.md  descriptive_stats.json
data/dagw-wiki/: dagw-wiki.md  descriptive_stats.json
data/dagw-wikibooks/: dagw-wikibooks.md  descriptive_stats.json
data/dagw-wikisource/: descriptive_stats.json
data/danish-pd/: danish-pd.md  descriptive_stats.json
data/dannet/: dannet.md  descriptive_stats.json
data/danske-taler/: danske-taler.md  descriptive_stats.json
data/dbc-abstracts/: dbc-abstracts.md  descriptive_stats.json
data/dbc-faktalink/: dbc-faktalink.md  descriptive_stats.json
data/dbc-forfatterweb/: dbc-forfatterweb.md  descriptive_stats.json
data/dbc-reviews/: dbc-reviews.md  descriptive_stats.json
data/depbank/: depbank.md  descriptive_stats.json
data/domsdatabasen/: descriptive_stats.json  domsdatabasen.md
data/dsk-alexandra/: descriptive_stats.json  dsk-alexandra.md
data/dsk-atp/: descriptive_stats.json  dsk-atp.md
data/dsk-cbrain/: descriptive_stats.json  dsk-cbrain.md
data/dsk-danskerhverv/: descriptive_stats.json  dsk-danskerhverv.md
data/dsk-dkmedier/: descriptive_stats.json  dsk-dkmedier.md
data/dsk-hofor/: descriptive_stats.json  (+1 more)
scripts/: convert.sh
src/: bump_version.py
template/: template.md
(+110 files in other folders)
