[project]
name = "datasheets"
version = "0.0.15"
description = "Project code for the dfm datasheets."
readme = "README.md"
requires-python = ">=3.12,<3.13" # 3.13 have issues with spacy and pytorch
dependencies = [
    # for commands
    "datasets>=4.0.0", # loading and validating datasets
    "gitpython>=3.1.43", # interacting with git
    "pydantic>=2.10.4", # validating schemas
    "tabulate>=0.9.0", # creating md table
    "tomlkit>=0.13.2", # reading toml
    "transformers>=4.47.1", # tokenization
    # figures
    "plotnine>=0.14.5",
    "plotly>=6.0.1",
    "nbformat>=4.2.0",
    "kaleido==0.2.1",
    "questionary>=2.1.0",
    "pyyaml>=6.0.2",
    "tqdm>=4.67.1",
    "polars>=1.30.0",
    "semhash>=0.3.0",
]

[dependency-groups]
dev = [
    # development
    "ipykernel>=6.29.5",
    "pip>=25.0.1",
    # test
    "pytest>=8.3.4",
    "pytest-cov>=6.2.1",
    # formatting
    "ruff>=0.8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
